--- a/css/creative.css
+++ b/css/creative.css
@@ -335,6 +335,7 @@ header.masthead p {
 }
 
 #sloghead { top:-10vh;}
-#tagline {background-color:#000; margin-top:120px; }
+/*#tagline {background-color:#000; margin-top:120px; }*/
 #contact{ background:#efefef;}
 
+#about { padding:4rem 0 8rem 0;}
