--- a/css/creative.css
+++ b/css/creative.css
@@ -25,6 +25,13 @@ hr.light {
   border-color: #fff;
 }
 
+hr.seperation
+{
+  max-width: 100%;
+  border-width: 1px;
+  border-color: #D3D3D3;
+}
+
 a {
   color: #F05F40;
   -webkit-transition: all 0.2s;
@@ -44,6 +51,12 @@ h6 {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
+.benefit-list{
+  margin-left: auto;
+  margin-right: auto;
+  display: table;
+}
+
 .bg-primary {
   /*background-color: #F05F40 !important;*/
 }
@@ -57,7 +70,7 @@ h6 {
 }
 
 section {
-  padding: 8rem 0;
+  padding: 2rem 0;
 }
 
 .section-heading {
